package Class5.policy;

public interface AssignmentPolicy {
    boolean canSubmit();
}
